--- a/src/app/home/schema-utils/maker-checker/maker-checker.component.html
+++ b/src/app/home/schema-utils/maker-checker/maker-checker.component.html
@@ -56,8 +56,7 @@
                                     <span>Delete</span>
                                 </div>
                                 <div>
-                                    <button type="button" class="btn btn-link" (click)='addStep()'
-                                        >
+                                    <button type="button" class="btn btn-link" (click)='addStep()'>
                                         <span class='rounded-circle bg-primary align-middle'>
                                             <span class='fa fa-plus text-white delete-steps'></span>
                                         </span>
@@ -108,7 +107,7 @@
                                             <ng-container *ngIf="edit.status">
                                                 <div class="d-flex align-items-center position-relative w-75">
                                                     <input type="text" odpAutoFocus class='form-control '
-                                                        formControlName='name'
+                                                        formControlName='name' (keyup.enter)="addStep()"
                                                         [ngClass]="{'is-invalid': stepNameError(step)}"
                                                         [attr.disabled]="!makerCheckerEnabled? true : null">
                                                     <span
@@ -128,7 +127,7 @@
                                             <div class="d-flex align-items-center position-relative"
                                                 *ngIf="edit.status">
                                                 <input type="number" min="0" class='form-control w-50'
-                                                    formControlName='approvals'
+                                                    formControlName='approvals' (keyup.enter)="addStep()"
                                                     [ngClass]="{'is-invalid': approvalError(step)}"
                                                     [attr.disabled]="!makerCheckerEnabled? true : null">
                                                 <span
