--- a/src/app/home/faas/faas-listing/faas-cell/faas-cell.component.html
+++ b/src/app/home/faas/faas-listing/faas-cell/faas-cell.component.html
@@ -38,21 +38,21 @@
     <span class="text-muted">N.A.</span>
 </ng-container>
 <span *ngIf="field == '_options' && data?._id">
-    <a *ngIf="data?.status === 'Undeployed'" href="#" class="text-accent mr-2"
+    <a *ngIf="data?.status === 'Undeployed' && hasStartStopPermission" href="#" class="text-accent mr-2"
         (click)="$event.preventDefault();startFaas(data)">
         Start
     </a>
-    <a *ngIf="data?.status === 'Active'" href="#" class="text-accent mr-2"
+    <a *ngIf="data?.status === 'Active' && hasStartStopPermission" href="#" class="text-accent mr-2"
         (click)="$event.preventDefault();stopFaas(data)">
         Stop
     </a>
     <a href="#" class="text-accent mr-2" (click)="$event.preventDefault();redirectToManage()">
         View
     </a>
-    <a href="#" class="text-accent mr-2" (click)="$event.preventDefault();redirectToManage(true)">
+    <a href="#" class="text-accent mr-2" *ngIf="hasManagePermission" (click)="$event.preventDefault();redirectToManage(true)">
         Edit
     </a>
-    <a href="#" class="text-accent mr-2" (click)="$event.preventDefault();deleteFaas()">
+    <a href="#" class="text-accent mr-2" *ngIf="hasManagePermission" (click)="$event.preventDefault();deleteFaas()">
         Delete
     </a>
 </span>
