--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter.component.html
@@ -1,10 +1,3 @@
-
-<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
-  <div class="align-self-center text-center">
-    <span class="fa fa-spinner fa-pulse fa-3x"></span>
-    <div class="text-secondary mt-2">Processing...</div>
-  </div>
-</div>
 <div class="wrapper">
   <div class="d-flex w-100">
     <!-- <div class="d-flex flex-column sub-menu  py-3 bg-light">
@@ -27,12 +20,12 @@
       </div>
     </div> -->
     <div class="px-3 w-100">
-      <odp-user-group-appcenter-services *ngIf="activeSubTab==0" [(roles)]="roles" (rolesChange)="onChange($event)"
-        class="w-100"></odp-user-group-appcenter-services>
+      <odp-user-group-appcenter-services *ngIf="activeSubTab==0" [(roles)]="roles" class="w-100">
+      </odp-user-group-appcenter-services>
       <odp-user-group-appcenter-flows *ngIf="activeSubTab==1" [roles]="roles" class="w-100">
       </odp-user-group-appcenter-flows>
-      <odp-user-group-appcenter-bokmark *ngIf="activeSubTab==2" [(roles)]="roles" (rolesChange)="onChange($event)"
-        class="w-100"></odp-user-group-appcenter-bokmark>
+      <odp-user-group-appcenter-bokmark *ngIf="activeSubTab==2" [(roles)]="roles" class="w-100">
+      </odp-user-group-appcenter-bokmark>
     </div>
   </div>
 </div>
