add function button missing when manage functions enabled

--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -3,11 +3,11 @@
   <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3 mb-3">
     <div class="font-weight-bold font-lg">List of Function</div>
     <button type="button" class="add-new btn-min-width btn btn-primary show" id="createDataFormat"
-      *ngIf="hasWritePermission('NS')" (click)="newFaas()">
+      *ngIf="hasWritePermission('FAAS')" (click)="newFaas()">
       <span class="fa fa-plus mr-2"></span>
       <span class="text">New Function</span>
     </button>
-  </div>
+  </div>ns
   <div class="card-container d-flex flex-column w-100 px-3">
     <ag-grid-angular #agGrid *ngIf="columnDefs" class="ag-theme-balham ag-grid-container custom-style"
       [columnDefs]="columnDefs" floatingFilter="true" rowModelType="infinite" [rowHeight]="32"
