--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -7,7 +7,7 @@
       <span class="fa fa-plus mr-2"></span>
       <span class="text">New Function</span>
     </button>
-  </div>ns
+  </div>
   <div class="card-container d-flex flex-column w-100 px-3">
     <ag-grid-angular #agGrid *ngIf="columnDefs" class="ag-theme-balham ag-grid-container custom-style"
       [columnDefs]="columnDefs" floatingFilter="true" rowModelType="infinite" [rowHeight]="32"
