--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
@@ -113,7 +113,7 @@
     </div>
   </div>
 </div>
-<div class="d-flex flex-row w-100 no-ds" *ngIf="serviceList.length == 0">
+<div class="d-flex flex-row w-100 no-ds" *ngIf="serviceList.length == 0 && !showLazyLoader">
   <div class="d-flex flex-column w-50 h-auto justify-content-center m-auto">
     <span class="text-muted"> There is no Data Service available. Please create a Data Service to configure the roles.
     </span>
