--- a/src/app/admin/user-list/user-manage/user-info/user-info.component.html
+++ b/src/app/admin/user-list/user-manage/user-info/user-info.component.html
@@ -27,7 +27,8 @@
                     <label class="text-secondary label-width">Name</label>
                     <ng-container *ngIf="!!user?.basicDetails?.name;else noName">
                         <span class="col-sm-2 col-md-4 px-0 text-truncate" *ngIf="user?.basicDetails?.name.length > 50"
-                            [ngbTooltip]="user?.basicDetails?.name" placement="top">{{ user?.basicDetails?.name }}</span>
+                            [ngbTooltip]="user?.basicDetails?.name" placement="top">{{ user?.basicDetails?.name
+                            }}</span>
                         <span class="col-sm-2 col-md-4 px-0 text-truncate"
                             *ngIf="user?.basicDetails?.name.length <= 50">{{ user?.basicDetails?.name }}</span>
                     </ng-container>
@@ -37,8 +38,8 @@
                 </div>
                 <div class="d-flex w-100 mb-3">
                     <label class="text-secondary label-width">Phone</label>
-                    <span
-                        class="col-sm-2 col-md-4 px-0 text-truncate">{{ user?.basicDetails?.phone ? user?.basicDetails.phone : 'Not Available' }}</span>
+                    <span class="col-sm-2 col-md-4 px-0 text-truncate">{{ user?.basicDetails?.phone ?
+                        user?.basicDetails.phone : 'Not Available' }}</span>
                 </div>
                 <div class="d-flex w-100 mb-3">
                     <label class="text-secondary label-width">Alternate Email</label>
@@ -74,13 +75,13 @@
                 <div class="d-flex w-100 mb-3">
                     <label class="text-secondary label-width">Authentication Type</label>
                     <span>
-                        {{ 
-                            user?.auth?.authType === 'local' 
-                            ? 'Local' :(user?.auth?.authType === 'ldap' 
-                                ? 'LDAP' : (user?.auth?.authType === 'azure' 
-                                    ? 'Azure' : 'Not Available'
-                                )
-                            )
+                        {{
+                        user?.auth?.authType === 'local'
+                        ? 'Local' :(user?.auth?.authType === 'ldap'
+                        ? 'LDAP' : (user?.auth?.authType === 'azure'
+                        ? 'Azure' : 'Not Available'
+                        )
+                        )
                         }}
                     </span>
                 </div>
@@ -236,15 +237,16 @@
             <div class="form-group d-flex align-items-center">
                 <label class="text-secondary modal-label m-0" for="key">Label</label>
                 <div class="input-wrapper w-100 position-relative">
-                    <input type="text" id="key" class="form-control" placeholder="Enter Key" formControlName="label" (change)="setKey()">
+                    <input type="text" id="key" class="form-control" placeholder="Enter Key" formControlName="label"
+                        (change)="setKey()">
                     <ng-container *ngIf="userAttributeForm.get('label').dirty">
                         <span *ngIf="userAttributeForm.get('label').hasError('required')"
-                            class="error-icon text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-                            ngbTooltip="Label is required">
+                            class="error-icon text-danger position-absolute fa fa-exclamation-circle high-zIndex"
+                            container="body" ngbTooltip="Label is required">
                         </span>
                         <span *ngIf="attributeAlreadyExists"
-                            class="error-icon text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-                            ngbTooltip="Attribute already exists">
+                            class="error-icon text-danger position-absolute fa fa-exclamation-circle high-zIndex"
+                            container="body" ngbTooltip="Attribute already exists">
                         </span>
                     </ng-container>
                 </div>
@@ -291,15 +293,16 @@
                     </div>
                     <ng-container *ngIf="userAttributeForm.get('value').dirty">
                         <span *ngIf="userAttributeForm.get('value').hasError('required')"
-                            class="error-icon text-danger position-absolute fa fa-exclamation-circle high-zIndex" container="body"
-                            ngbTooltip="Value is required">
+                            class="error-icon text-danger position-absolute fa fa-exclamation-circle high-zIndex"
+                            container="body" ngbTooltip="Value is required">
                         </span>
                     </ng-container>
                 </div>
             </div>
         </div>
         <div class="d-flex justify-content-end align-items-center">
-            <button type="button" class="btn btn-min-width btn-dark" [disabled]="userAttributeForm.invalid || attributeAlreadyExists"
+            <button type="button" class="btn btn-min-width btn-dark"
+                [disabled]="userAttributeForm.invalid || attributeAlreadyExists"
                 (click)="manageAttributeModalRef.close(true)" id="attrManageModalYes">Save</button>
         </div>
     </div>
@@ -329,6 +332,10 @@
                 <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
                     *ngIf="resetPasswordForm.get('password').dirty && resetPasswordForm.get('password').hasError('minlength')"
                     [ngbTooltip]="'Password should be minimum 8 chars long'" ccontainer="body" placement="right"></span>
+                <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+                    *ngIf="resetPasswordForm.get('password').dirty && resetPasswordForm.get('password').hasError('pattern')"
+                    [ngbTooltip]="'Password must have one of following - Uppercase(A - Z), Lowercase(a - z), Special characters (!@#$%^&*?~) and Numbers (0 - 9)'"
+                    ccontainer="body" placement="right"></span>
             </div>
             <div class="d-flex w-100 mb-3 position-relative">
                 <label class="text-secondary modal-label-pwd" for="c-pwd">Confirm Password</label>
@@ -345,7 +352,8 @@
             </div>
         </form>
         <div class="d-flex align-items-end justify-content-end mt-5">
-            <button type="button" class="btn btn-min-width btn-dark" (click)="resetPassword()">Save</button>
+            <button type="button" class="btn btn-min-width btn-dark" (click)="resetPassword()"
+                [disabled]='resetPasswordForm.invalid'>Save</button>
         </div>
     </div>
 </ng-template>
