--- a/src/app/home/control-panel/user/user-manage/user-manage.component.html
+++ b/src/app/home/control-panel/user/user-manage/user-manage.component.html
@@ -10,7 +10,9 @@
             <div class="w-100">
                 <div class="ml-3 mb-3 d-flex">
                     <ng-container *ngIf="user?.basicDetails?.name; else noName">
-                        <div class="user-name mr-2 text-truncate" [ngbTooltip]="user.basicDetails.name.length > 50 ? user.basicDetails.name : ''" placement="top">
+                        <div class="user-name mr-2 text-truncate"
+                            [ngbTooltip]="user.basicDetails.name.length > 50 ? user.basicDetails.name : ''"
+                            placement="top">
                             {{ user.basicDetails.name }}
                         </div>
                     </ng-container>
@@ -30,7 +32,8 @@
                     <div class="d-flex align-items-center ml-3 mb-2" *ngIf="!!user?.basicDetails?.phone">
                         <span class="fas fa-phone text-secondary mr-2" id="userPhone"></span>
                         <span class="text-secondary text-truncate"
-                            [ngbTooltip]="user.basicDetails.phone.length > 36 ? user.basicDetails.phone : ''" placement="top">
+                            [ngbTooltip]="user.basicDetails.phone.length > 36 ? user.basicDetails.phone : ''"
+                            placement="top">
                             {{ user.basicDetails.phone }}
                         </span>
                     </div>
@@ -52,13 +55,13 @@
                 </div>
             </div>
             <div class="user-action d-flex align-items-start position-absolute">
-                <button *ngIf="hasPermission('PMUBU') && authType !== 'azure'" type="button" class="btn btn-link border-0 py-0"
-                    (click)="editUserDetails()">Edit User</button>
+                <button *ngIf="hasPermission('PMUBU') && authType !== 'azure'" type="button"
+                    class="btn btn-link border-0 py-0" (click)="editUserDetails()">Edit User</button>
                 <div *ngIf="hasPermission('PMUA') || hasPermission('PMUBD')"
                     class="d-flex flex-column position-relative">
-                    <div class="d-flex align-items-center hover user-option-class"
-                        [ngClass]="{'open':showMoreOptions}" (click)="showMoreOptions = !showMoreOptions"
-                        odpClickOutside (outside)="showMoreOptions = false;">
+                    <div class="d-flex align-items-center hover user-option-class" [ngClass]="{'open':showMoreOptions}"
+                        (click)="showMoreOptions = !showMoreOptions" odpClickOutside
+                        (outside)="showMoreOptions = false;">
                         <div class="pr-2 text-primary">More actions</div>
                         <div class="fas fa-angle-down text-primary"></div>
                     </div>
@@ -82,8 +85,7 @@
                             </li>
                             <li *ngIf="hasPermission('PMUBD')" class="p-1 hover">
                                 <button type="button" class="btn btn-link mr-2 pr-0 text-align-left"
-                                    [disabled]="isThisUser(user)"
-                                    (click)="removeFromApp()">
+                                    [disabled]="isThisUser(user)" (click)="removeFromApp()">
                                     Remove from app
                                 </button>
                             </li>
@@ -99,14 +101,17 @@
                     <strong>Attributes</strong>
                 </div>
                 <div *ngIf="!extraInfo" class="font-normal">No attributes have been configured</div>
-                <button *ngIf="hasPermission('PMUBU')" class="btn btn-success" (click)="editMode = false;openAttributeModal()">
+                <button *ngIf="hasPermission('PMUBU')" class="btn btn-success"
+                    (click)="editMode = false;openAttributeModal()">
                     <span class="fa fa-plus mr-2"></span>
                     Add Attribute
                 </button>
             </div>
             <div class="attrs-grid-container px-4 pb-4" *ngIf="!!userAttributeList && !!extraInfo">
-                <ag-grid-angular #agGrid class="card-container ag-theme-balham ag-grid-container" [gridOptions]="gridOptions" [rowData]="rowData | agGridFilter:filterModel"
-                    [frameworkComponents]="frameworkComponents" (filterModified)="!filtering && onFilterChanged($event)">
+                <ag-grid-angular #agGrid class="card-container ag-theme-balham ag-grid-container"
+                    [gridOptions]="gridOptions" [rowData]="rowData | agGridFilter:filterModel"
+                    [frameworkComponents]="frameworkComponents"
+                    (filterModified)="!filtering && onFilterChanged($event)">
                 </ag-grid-angular>
             </div>
             <div class="bg-gray border-bottom mt-3 text-secondary hover w-100 additionInfo-helper"
@@ -135,9 +140,11 @@
                     </button>
                 </div>
             </div>
-            <div *ngIf="!isAppAdmin && (manageGroup || viewGroup) && !!toggleGroups?.length" class="d-flex flex-wrap team-container">
-                <odp-radio-chip *ngFor="let group of toggleGroups" class="m-2" [label]="group.name + ' (' + group.userCount + ')'"
-                    [checked]="group.checked" [loading]="group.loading" (checkedChange)="onGroupToggle(group, $event)">
+            <div *ngIf="!isAppAdmin && (manageGroup || viewGroup) && !!toggleGroups?.length"
+                class="d-flex flex-wrap team-container">
+                <odp-radio-chip *ngFor="let group of toggleGroups" class="m-2"
+                    [label]="group.name + ' (' + group.userCount + ')'" [checked]="group.checked"
+                    [loading]="group.loading" (checkedChange)="onGroupToggle(group, $event)">
                 </odp-radio-chip>
             </div>
         </div>
@@ -275,9 +282,13 @@
                         [ngClass]="{'fa-eye': !showPassword['new'],'fa-eye-slash': showPassword['new'] }"
                         (click)="showPassword['new']= !showPassword['new']"></span>
                     <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
-                        *ngIf="resetPasswordForm.get('password').dirty && resetPasswordForm.get('password').hasError('minlength')"
-                        [ngbTooltip]="'Password should be minimum 8 chars long'" ccontainer="body"
+                        *ngIf="resetPasswordForm.get('password').dirty && resetPasswordForm.get('password').hasError('pattern')"
+                        [ngbTooltip]="'Password must have one of following - Uppercase(A - Z), Lowercase(a - z), Special characters (!@#$%^&*?~) and Numbers (0 - 9)'" ccontainer="body"
                         placement="right"></span>
+                    <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+                        *ngIf="resetPasswordForm.get('password').dirty && resetPasswordForm.get('password').hasError('minlength')"
+                        [ngbTooltip]="'Password should be minimum 8 chars long'" ccontainer="body" placement="right">
+                    </span>
                 </div>
                 <div class="d-flex w-100 mb-3 position-relative">
                     <label class="text-secondary modal-label-pwd" for="c-pwd">Confirm Password</label>
@@ -295,7 +306,7 @@
                 </div>
             </form>
             <div class="d-flex align-items-end justify-content-end mt-5">
-                <button type="button" class="btn btn-min-width btn-dark" (click)="resetPassword()">Save</button>
+                <button type="button" class="btn btn-min-width btn-dark" (click)="resetPassword()" [disabled]='resetPasswordForm.invalid'>Save</button>
             </div>
         </div>
     </ng-template>
@@ -316,7 +327,8 @@
                     Label
                     <sup class="text-danger">*</sup>
                 </label>
-                <input id="label" type="text" class="form-control" [ngClass]="{'is-invalid no-x': getLabelError()}" formControlName="label">
+                <input id="label" type="text" class="form-control" [ngClass]="{'is-invalid no-x': getLabelError()}"
+                    formControlName="label">
                 <div class="key-info-text">
                     <small class="text-secondary pt-1" *ngIf="!!attributesForm?.get('key')?.value">
                         {{ 'Key: ' + attributesForm?.get('key').value }}
@@ -332,12 +344,14 @@
                     <sup class="text-danger">*</sup>
                 </label>
                 <div id="type" ngbDropdown #listDropdown="ngbDropdown" class="w-100" container="body">
-                    <button class="btn bg-white border rounded w-100 d-flex justify-content-between align-items-center" ngbDropdownToggle>
+                    <button class="btn bg-white border rounded w-100 d-flex justify-content-between align-items-center"
+                        ngbDropdownToggle>
                         <odp-field-type [label]="true" [field]="{type:attributesForm.get('type').value,properties:{}}">
                         </odp-field-type>
                     </button>
                     <div style="width:350px" ngbDropdownMenu>
-                        <div class="dropdown-itm px-2 py-1" *ngFor="let type of types" (click)="onAttributeFormTypeChange(type);listDropdown.close();">
+                        <div class="dropdown-itm px-2 py-1" *ngFor="let type of types"
+                            (click)="onAttributeFormTypeChange(type);listDropdown.close();">
                             <odp-field-type [label]="true" [field]="{type:type.value,properties:{}}">
                             </odp-field-type>
                         </div>
@@ -351,12 +365,13 @@
                 </label>
                 <input *ngIf="attributesForm.get('type').value === 'String'" id="value" type="text" class="form-control"
                     [ngClass]="{'is-invalid no-x': getValError()}" formControlName="value">
-                <input *ngIf="attributesForm.get('type').value === 'Number'" id="value" type="number" class="form-control"
-                    [ngClass]="{'is-invalid no-x': getValError()}" formControlName="value">
+                <input *ngIf="attributesForm.get('type').value === 'Number'" id="value" type="number"
+                    class="form-control" [ngClass]="{'is-invalid no-x': getValError()}" formControlName="value">
                 <input *ngIf="attributesForm.get('type').value === 'Date'" id="value" type="date" class="form-control"
                     [ngClass]="{'is-invalid no-x': getValError()}" formControlName="value">
                 <odp-switch *ngIf="attributesForm.get('type').value === 'Boolean'" [edit]="{status:true}"
-                    [checked]="attributesForm.get('value').value" (checkedChange)="attributesForm.get('value').setValue($event)"></odp-switch>
+                    [checked]="attributesForm.get('value').value"
+                    (checkedChange)="attributesForm.get('value').setValue($event)"></odp-switch>
                 <span class="fas fa-question-circle text-danger attrs-error-icon position-absolute"
                     *ngIf="attributesForm.get('type').value !== 'Boolean' && getValError()"
                     ngbTooltip="This is a required field" placement="right"></span>
@@ -364,8 +379,9 @@
             <div class="d-flex align-items-center justify-content-end mt-4">
                 <button type="button" class="btn btn-min-width btn-dark ignore-click mr-3"
                     (click)="attributeModalRef.close(false)">Cancel</button>
-                <button type="button" class="btn btn-min-width btn-success ignore-click" [disabled]="attributesForm.invalid"
-                    (click)="attributeModalRef.close(true)">{{ editMode ? 'Save' : 'Add'}}</button>
+                <button type="button" class="btn btn-min-width btn-success ignore-click"
+                    [disabled]="attributesForm.invalid" (click)="attributeModalRef.close(true)">{{ editMode ? 'Save' :
+                    'Add'}}</button>
             </div>
         </div>
     </ng-template>
