--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
@@ -13,7 +13,7 @@
       <div class='ds-name py-2 px-4 hover' *ngFor="let srvc of serviceList; let srvcIndex = index"
         (click)='selectDataService(srvc)' [ngClass]='{"text-accent alert-accent": selectedDS == srvc}'>
         <span>
-          {{ srvc.entityName }}
+          {{ srvc.name }}
         </span>
       </div>
     </div>
